syntax = "proto3";

package product;

service ProductService {
  rpc GetProduct (GetProductRequest) returns (GetProductResponse);
  rpc PlaceOrder (PlaceOrderRequest) returns (PlaceOrderResponse);
}

message GetProductRequest {
  string productId = 1;
}

message GetProductResponse {
  string productId = 1;
  string productName = 2;
  int32 quantity = 3;
  float price = 4;
}

message PlaceOrderRequest {
  string productId = 1;
  int32 orderQuantity = 2;
}

message PlaceOrderResponse {
  bool success = 1;
  string message = 2;
}
